@@ -1,3 +1,6 @@
+2008/01/09
+	11. In flicDirectPath, curvature bound is enforced at the creation of the direct path.
+	
 2007/12/18
 	10.Added CkwsPlusLTRdmBuilder class. Derives from any diffusing
 	roadmap builder class and implements a local tree diffusing method.
